cmd/testapp/testapp.yaml
# Test APP 1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp1
  labels:
    app: testapp1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: testapp1
  template:
    metadata:
      labels:
        app: testapp1
    spec:
      containers:
      - name: testapp1
        image: github.com/vagababov/service-shuffler/cmd/testapp
        ports:
        - name: serve-port
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: testapp1
  labels:
    app: testapp1
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: serve-port
  selector:
    app: testapp1
---
# Test APP 2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp2
  labels:
    app: testapp2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: testapp2
  template:
    metadata:
      labels:
        app: testapp2
    spec:
      containers:
      - name: testapp2
        image: github.com/vagababov/service-shuffler/cmd/testapp
        ports:
        - name: serve-port
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: testapp2
  labels:
    app: testapp2
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: serve-port
  selector:
    app: testapp2
