cmd/testapp/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shuffle-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "testapp1.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testapp1
spec:
  hosts:
  - "testapp1.default.example.com"
  gateways:
  - shuffle-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: testapp1.default.svc.cluster.local
